# psim-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml  test_output.psimsch
.claude/: settings.local.json
docs/: 2026-03-24-phase-1-4-implementation-gap-review.md  2026-03-24-phase-1-4-remediation-todo.md  PRD.md  api-spec.md  architecture.md  development-guide.md  psim_mcp_dev_checklist_v2.md  security-mcp.md  security.md  testing-guide.md
docs/ver1.1/: additional-review-findings.md  circuit-expansion-plan.md  circuit-generation-status.md  implementation-review.md
docs/ver1.1.1/: 00-overview.md  01-circuit-spec.md  02-component-catalog.md  03-topology-generator.md  04-bridge-wiring.md  05-validation-layer.md  06-windows-smoke-test.md  07-nlp-intent-parser.md  08-implementation-status.md  09-dynamic-circuit-design.md  10-parser-hardcoding-review.md  11-non-hardcoding-risks.md  12-wire-function-confirmation.md  13-psim-element-type-mapping.md  14-parser-dehardcoding-plan.md
docs/ver1.1.4/: 07-circuit-composition-guide.md
docs/ver2/: PRD.md  api-spec.md  architecture.md  backend-implementation-spec.md  commercialization-strategy.md  development-guide.md  go-to-market.md  implementation-phases.md  supabase-design.md  tenant-strategy.md  worker-implementation-spec.md
docs/ver5/: README.md  circuit-metadata-schema.md  implementation-status.md  metadata-to-code-ownership-map.md  natural-language-hardcoding-review.md  phase-1-file-impact-and-interface-draft.md  phase-2-circuit-graph-design.md  phase-3-layout-engine-design.md  phase-3-to-5-detailed-roadmap.md  phase-4-advanced-routing-design.md  phase-4-routing-fix-plan.md  phase-5-intent-resolution-design.md  phase-execution-plan.md  prd-and-architecture-user-intent-driven-circuit-synthesis.md  psim-tutorial-reference-dependency-review.md  user-intent-driven-circuit-synthesis-plan.md  user-intent-vs-example-pattern-circuit-synthesis-review.md
scripts/: run_pytest_local.ps1
src/psim_mcp/: __init__.py  config.py  server.py
tests/: conftest.py
tests/integration/: conftest.py  test_canonical_pipeline.py  (+3 more)
(+252 files in other folders)
