[project]
name = "psim-mcp"
version = "0.1.0"
description = "MCP server for Altair PSIM simulation automation via Claude Desktop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
psim-mcp = "psim_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["tests/smoke"]
markers = [
    "integration: Full-stack integration tests (deselect with -m 'not integration')",
    "real_psim: Opt-in tests that require a real PSIM installation on Windows",
    "acceptance: Given/When/Then acceptance scenarios backed by simulation results",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psim_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Intentional: constants/patterns defined before imports that depend on them
"src/psim_mcp/layout/auto_placer.py" = ["E402"]
"src/psim_mcp/parsers/intent_parser.py" = ["E402"]
